# python_serialization_deserialization_examples

./: .gitignore  01_json.py  02_bytes.py  03a_write_simple_avro.py  03b_read_simple_avro.py  03c_read_evolution_avro.py  04a_write_complexdata_avro.py  05_avro_redis.py  06a_write_avro.py  06b_read_avro.py  config_template.yaml  friends_data.py  pyproject.toml  readme.md
data/: numbers.avro  numbers2.avro
