[tool.poetry]
name = "python-serialization-deserialization-examples"
version = "0.1.0"
description = ""
authors = ["Ganesh Chandrasekaran <gchandra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastavro = "^1.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
